# fbhc2016

./: README.md
include/paiv/: parse_input.hpp
qualification/: CMakeLists.txt
qualification/boomerang/: CMakeLists.txt  problem.cpp  sky.hpp  unity.cpp
qualification/boomerang/tests/: 02_generated_input.txt  02_generated_output.txt  generate.py
qualification/high-security/: CMakeLists.txt  main.cpp
qualification/high-security/tests/: 01_input.txt  01_output.txt
qualification/price-is-correct/: CMakeLists.txt  main.cpp
qualification/price-is-correct/tests/: 01_input.txt  01_output.txt
qualification/text-editor/: CMakeLists.txt  main.cpp
qualification/text-editor/tests/: 01_input.txt  01_output.txt
